objects/EUR_CRM_GB_Action__c.object
<CustomObject>
    <description>PREU GB Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Actions (EU)</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Date__c</fullName>
        <formula>EUR_CRM_GB_Objective__r.EUR_CRM_End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_GB_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_GB_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>EUR_CRM_GB_Objective__c</referenceTo>
        <relationshipName>User_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Date__c</fullName>
        <formula>EUR_CRM_GB_Objective__r.EUR_CRM_Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Actions (EU)</label>
    <listViews>
        <fullName>EUR_CH_Actions</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_GB_Notes__c</columns>
        <columns>EUR_CRM_GB_Objective__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Action__c.EUR_CH_Central_Objective_Action</value>
        </filters>
        <label>EUR CH Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Actions</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_GB_Notes__c</columns>
        <columns>EUR_CRM_GB_Objective__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Action__c.EUR_MA_Central_Objective_Action</value>
        </filters>
        <label>EUR MA Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA_OLD</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>Action No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR AO Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Central_Objective</fullName>
        <active>true</active>
        <label>AT Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR BG Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR CH Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Central_Objective</fullName>
        <active>true</active>
        <label>GB Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR KE Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR MA Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR NG Central Objective Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Central_Objective_Action</fullName>
        <active>true</active>
        <label>EUR RU Central Objective Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>